# django-interview

./: .gitignore  Dockerfile  README.md  example.xlsx  pyproject.toml  us trade price changes2011_nofc.xlsx
config/: settings.py  urls.py
excel_summary/: apps.py  excel_utils.py  serializers.py  urls.py  views.py
