[project]
name = "django-interview"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tymek", email = "t.ilczyszyn@gmail.com"},
]
dependencies = ["Django>=5.2.8", "djangorestframework>=3.16.1", "openpyxl>=3.1.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
docs = [
    "drf-spectacular>=0.29.0",
]
[tool.pdm]
distribution = false
